objects/Function_Definition__c/Function_Definition__c.object-meta.xml
<CustomObject>
    <description>It is the object for defining the application function. The attributes are designed for defining the function structure such as script name, header name and others. Those definitions will be used for constructing the screen.</description>
    <label>Function</label>
    <nameField>
        <label>Function Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>