objects/Function_Definition__c/fields/Angular_Application__c.field-meta.xml
<CustomField>
    <fullName>Angular_Application__c</fullName>
    <description>It is the name of Angular framework Application.</description>
    <label>Angular Application</label>
    <length>40</length>
    <type>Text</type>
</CustomField>