objects/Function_Definition__c/fields/Angular_Controller__c.field-meta.xml
<CustomField>
    <fullName>Angular_Controller__c</fullName>
    <description>It is the name of Angular Framework Controller.</description>
    <label>Angular Controller</label>
    <length>40</length>
    <type>Text</type>
</CustomField>