objects/Function_Definition__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Functions</relationshipLabel>
    <relationshipName>Functions</relationshipName>
    <type>Lookup</type>
</CustomField>