objects/Function_Definition__c/fields/Disable_OTP_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Disable_OTP_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable OTP Refresh</label>
    <type>Checkbox</type>
</CustomField>