objects/Function_Definition__c/fields/End_Page_Script__c.field-meta.xml
<CustomField>
    <fullName>End_Page_Script__c</fullName>
    <label>End Page Script</label>
    <length>100</length>
    <type>Text</type>
</CustomField>