objects/Function_Definition__c/fields/Has_Page_Five__c.field-meta.xml
<CustomField>
    <fullName>Has_Page_Five__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Page Five</label>
    <type>Checkbox</type>
</CustomField>