objects/Function_Definition__c/fields/Has_Page_Four__c.field-meta.xml
<CustomField>
    <fullName>Has_Page_Four__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Page Four</label>
    <type>Checkbox</type>
</CustomField>