objects/Function_Definition__c/fields/Has_Page_Three__c.field-meta.xml
<CustomField>
    <fullName>Has_Page_Three__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Page Three</label>
    <type>Checkbox</type>
</CustomField>