objects/Function_Definition__c/fields/Has_Page_Two__c.field-meta.xml
<CustomField>
    <fullName>Has_Page_Two__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Page Two</label>
    <type>Checkbox</type>
</CustomField>