objects/Function_Definition__c/fields/Is_Public_Page__c.field-meta.xml
<CustomField>
    <fullName>Is_Public_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Public Page</label>
    <type>Checkbox</type>
</CustomField>