objects/Function_Definition__c/fields/Is_Starting_Page__c.field-meta.xml
<CustomField>
    <fullName>Is_Starting_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>it is the default starting page among all functions</description>
    <inlineHelpText>If it is default starting page, please check otherwise keep unchecked.</inlineHelpText>
    <label>Is Starting Page</label>
    <type>Checkbox</type>
</CustomField>