objects/Function_Definition__c/fields/Mobile_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Page_Title__c</fullName>
    <label>Page Title</label>
    <length>60</length>
    <type>Text</type>
</CustomField>