objects/Function_Definition__c/fields/OTP_Required__c.field-meta.xml
<CustomField>
    <fullName>OTP_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OTP Required</label>
    <type>Checkbox</type>
</CustomField>