objects/Function_Definition__c/fields/Page_2_Title__c.field-meta.xml
<CustomField>
    <fullName>Page_2_Title__c</fullName>
    <label>Title (Page 2)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>