objects/Function_Definition__c/fields/Page_Banner__c.field-meta.xml
<CustomField>
    <fullName>Page_Banner__c</fullName>
    <label>Page Banner</label>
    <length>40</length>
    <type>Text</type>
</CustomField>