objects/Function_Definition__c/fields/Page_Footer__c.field-meta.xml
<CustomField>
    <fullName>Page_Footer__c</fullName>
    <label>Page Footer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>