objects/Function_Definition__c/fields/Page_Footer_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Page_Footer_Mobile__c</fullName>
    <label>Page Footer (Mobile)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>