objects/Function_Definition__c/fields/Page_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Page_Loaded__c</fullName>
    <label>Page Loaded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>