objects/Function_Definition__c/fields/Page_Menu__c.field-meta.xml
<CustomField>
    <fullName>Page_Menu__c</fullName>
    <description>It is the system menu in the page. It is optional element.</description>
    <label>Page Menu</label>
    <length>40</length>
    <type>Text</type>
</CustomField>