objects/Function_Definition__c/fields/Page_Menu_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Page_Menu_Mobile__c</fullName>
    <label>Page Menu (Mobile)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>