objects/Function_Definition__c/fields/Page_Opening__c.field-meta.xml
<CustomField>
    <fullName>Page_Opening__c</fullName>
    <label>Page Opening</label>
    <length>255</length>
    <type>Text</type>
</CustomField>