objects/Function_Definition__c/fields/Page_Range__c.field-meta.xml
<CustomField>
    <fullName>Page_Range__c</fullName>
    <label>Page Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Page 1 - Page 2</fullName>
            </value>
            <value>
                <fullName>Page 1 - Page 3</fullName>
            </value>
            <value>
                <fullName>Page 1 - Page 4</fullName>
            </value>
            <value>
                <fullName>Page 1 - Page 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>