objects/Function_Definition__c/fields/Page_Script__c.field-meta.xml
<CustomField>
    <fullName>Page_Script__c</fullName>
    <description>Page Script is the name of java script component for the particular page</description>
    <label>Page Script</label>
    <length>40</length>
    <type>Text</type>
</CustomField>