objects/Function_Definition__c/fields/Page_Template__c.field-meta.xml
<CustomField>
    <fullName>Page_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is the field to define the theme of page.</description>
    <label>Page Template</label>
    <referenceTo>Function_Template__c</referenceTo>
    <relationshipLabel>Functions</relationshipLabel>
    <relationshipName>Functions</relationshipName>
    <type>Lookup</type>
</CustomField>