objects/Function_Definition__c/fields/Privilege_Whitelist__c.field-meta.xml
<CustomField>
    <fullName>Privilege_Whitelist__c</fullName>
    <label>Privilege Whitelist</label>
    <length>40</length>
    <type>Text</type>
</CustomField>