objects/Function_Definition__c/fields/Session_Data_Factory__c.field-meta.xml
<CustomField>
    <fullName>Session_Data_Factory__c</fullName>
    <label>Session Data Factory</label>
    <length>40</length>
    <type>Text</type>
</CustomField>