objects/Function_Definition__c/fields/Session_Handler__c.field-meta.xml
<CustomField>
    <fullName>Session_Handler__c</fullName>
    <label>Session Handler</label>
    <length>200</length>
    <type>Text</type>
</CustomField>