objects/Function_Definition__c/recordTypes/core_cws_layout_login_page.recordType-meta.xml
<RecordType>
    <fullName>core_cws_layout_login_page</fullName>
    <active>true</active>
    <description>Layout exclusive for login page</description>
    <label>Login Page Layout</label>
</RecordType>