objects/Function_Definition__c/recordTypes/core_cws_layout_single_col_page.recordType-meta.xml
<RecordType>
    <fullName>core_cws_layout_single_col_page</fullName>
    <active>true</active>
    <description>Layout for presenting data in single column</description>
    <label>Single Column Page Layout</label>
</RecordType>