objects/Function_Definition__c/recordTypes/core_cws_layout_two_col_page.recordType-meta.xml
<RecordType>
    <fullName>core_cws_layout_two_col_page</fullName>
    <active>true</active>
    <description>Layout for presenting data in two columns</description>
    <label>Two Columns Page Layout</label>
</RecordType>