objects/Function_Definition__c/recordTypes/core_cws_layout_typed_page.recordType-meta.xml
<RecordType>
    <fullName>core_cws_layout_typed_page</fullName>
    <active>true</active>
    <description>Layout for presenting typed data</description>
    <label>Typed Page Layout</label>
</RecordType>